# postmail

./: .gitignore  README.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 06522abaaaaa_add_supabase_id_to_users.py  129fd5f7678e_add_topic_history_table.py  b7da46eafd46_initial_schema.py  bf2c37a51633_add_length_tier_to_essays.py  c3a1f8b92d47_add_big_question_to_digests.py
backend/app/: auth.py  config.py  database.py  main.py
backend/app/agents/: graph.py  sources.py  state.py  subdomain_map.py
backend/app/agents/nodes/: composer_dispatch.py  composer_essays.py  digest_assembler.py  diversity_checker.py  extractor.py  fetcher.py  quality_filter.py  relevance_matcher.py  research_agent.py
backend/app/jobs/: digest_cron.py
backend/app/models/: __init__.py  article.py  bookmark.py  digest.py  essay.py  essay_feedback.py  interest.py  read_history.py  research_source.py  topic_history.py  user.py
backend/app/routers/: articles.py  bookmarks.py  digests.py  essays.py  health.py  reading.py  search.py  sse.py  users.py
backend/app/schemas/: __init__.py  digest.py  essay.py  items.py  research.py  user.py
backend/app/services/: digest_builder.py  embeddings.py  event_bus.py  llm.py  topic_history.py
backend/app/utils/: groq_queue.py
backend/tests/: test_cosine_similarity.py  test_reading_schema.py  test_research_helpers.py  test_schemas.py  test_streaks.py
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  PIPELINE.md  SETUP.md
(+57 files in other folders)
